--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,7 +1,7 @@
 on: [push]
 
 jobs:
-  hello_world_job:
+  workflows:
     runs-on: ubuntu-latest
     name: A job to say hello
     steps:
@@ -17,3 +17,9 @@ jobs:
       # Use the output from the `hello` step
       - name: Get the output time
         run: echo "The time was ${{ steps.hello.outputs.time }}"
+
+      - Creates spark setup
+        run: ../spark-setup.yaml
+
+  spark_setup:
+    runs-on: ubunt
