--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,7 @@ jobs:
       - name: Get the output time
         run: echo "The time was ${{ steps.hello.outputs.time }}"
 
-      - Creates spark setup
+      - name: Creates spark setup
         run: ../spark-setup.yaml
 
   spark_setup:
