--- a/.github/actions/action.yaml
+++ b/.github/actions/action.yaml
@@ -1,18 +1,14 @@
-# action.yml
-name: 'Hello World'
-description: 'Greet someone and record the time'
-inputs:
-  who-to-greet:  # id of input
-    description: 'Who to greet'
-    required: true
-    default: 'World'
-outputs:
-  time: # id of output
-    description: 'The time we greeted you'
-  python-version:
-    description: 'Version of python installed on docker image.'
-runs:
-  using: 'docker'
-  image: 'Dockerfile'
-  args:
-    - ${{ inputs.who-to-greet }}
+steps:
+- uses: actions/setup-python@v2
+  with:
+    python-version: '3.8'
+- uses: actions/setup-java@v1
+  with:
+    java-version: '11'
+
+- uses: vemonet/setup-spark@v1
+  with:
+    spark-version: '3.2.1'
+    hadoop-version: '3.2'
+
+- run: spark-submit --version
