--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,14 +9,5 @@ jobs:
       # you must check out the repository
       - name: Checkout
         uses: actions/checkout@v3
-      - name: Hello world action step
+      - name: Spark action step
         uses: ./ # Uses an action in the root directory
-        id: hello
-        with:
-          who-to-greet: 'JJ Urchin'
-      # Use the output from the `hello` step
-      - name: Get the output time
-        run: echo "The time was ${{ steps.hello.outputs.time }}"
-        
-      - name: Checkout spark action
-        run: ../actions/spark-setup.yaml
