--- a/.github/actions/action.yaml
+++ b/.github/actions/action.yaml
@@ -1,14 +1,18 @@
-steps:
-- uses: actions/setup-python@v2
-  with:
-    python-version: '3.8'
-- uses: actions/setup-java@v1
-  with:
-    java-version: '11'
+runs:
+  using: "composite"
+  steps:
+  - name: Install Python
+    uses: actions/setup-python@v2
+    with:
+      python-version: '3.8'
+  - name: Install Java
+    uses: actions/setup-java@v1
+    with:
+      java-version: '11'
+  - name: Install spark
+    uses: vemonet/setup-spark@v1
+    with:
+      spark-version: '3.2.1'
+      hadoop-version: '3.2'
 
-- uses: vemonet/setup-spark@v1
-  with:
-    spark-version: '3.2.1'
-    hadoop-version: '3.2'
-
-- run: spark-submit --version
+  - run: spark-submit --version
