--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,11 +3,11 @@ on: [push]
 jobs:
   workflows:
     runs-on: ubuntu-latest
-    name: A job to say hello
+    name: Test spark
     steps:
       # To use this repository's private action,
       # you must check out the repository
       - name: Checkout
         uses: actions/checkout@v3
       - name: Spark action step
-        uses: ./ # Uses an action in the root directory
+        uses: ./.github/actions/action.yaml # Uses an action in the root directory
