--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,4 +10,4 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
       - name: Spark action step
-        uses: ./.github/actions/action.yaml # Uses an action in the root directory
+        uses: ./.github/actions/ # Uses an action in the root directory
